QQmlDelegateModel: Don't try to destroy nullptr objects

The object is stored in a QPointer for a reason. If it's already gone,
we don't have to destroy it anymore. Check accordingly.

Pick-to: 6.10 6.8 6.5
Fixes: QTBUG-141105
Change-Id: I36278cac5990e5063b9021104267d83578678559
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>